refactor: Reorganize script tags in index.html for better readability

--- a/index.html
+++ b/index.html
@@ -17,39 +17,25 @@
 <body class="bg-slate-100 text-slate-800 flex items-center justify-center min-h-screen p-4">
   <div id="root" class="bg-slate-100 text-slate-800 flex items-center justify-center min-h-screen p-4"></div>
 
-  <!-- component awal -->
-  <script type="text/babel" src="./components/Header.js"></script>
-  <script type="text/babel" src="./components/Main.js"></script>
-  <script type="text/babel" src="./components/Footer.js"></script>
+  <<script type="text/babel" src="./components/ProgressBar.js">
+    </script>
+    <script type="text/babel" src="./components/Heading1.js"></script>
+    <script type="text/babel" src="./components/MyButton.js"></script>
+    <script type="text/babel" src="./components/OptionChoice.js"></script>
+    <script type="text/babel" src="./components/ChoiceResult.js"></script>
 
-  <!-- sub components -->
-  <script type="text/babel" src="./components/ProgressBar.js"></script>
-  <script type="text/babel" src="./components/Heading1.js"></script>
-  <script type="text/babel" src="./components/MyButton.js"></script>
-  <script type="text/babel" src="./components/ReviewSection.js"></script>
+    <script type="text/babel" src="./components/ReviewSection.js"></script>
+    <script type="text/babel" src="./components/SubMainQuizContainer.js"></script>
+    <script type="text/babel" src="./components/SubMainResultContainer.js"></script>
 
-  <!-- global component -->
-  <script type="text/babel" src="./components/GlobalContext.js"></script>
+    <script type="text/babel" src="./components/GlobalContext.js"></script>
 
-  <!-- sub sub components -->
-  <script type="text/babel" src="./components/SubMainQuizContainer.js"></script>
-  <script type="text/babel" src="./components/OptionChoice.js"></script>
-  <script type="text/babel" src="./components/SubMainResultContainer.js"></script>
-  <script type="text/babel" src="./components/ChoiceResult.js"></script>
+    <script type="text/babel" src="./components/Header.js"></script>
+    <script type="text/babel" src="./components/Main.js"></script>
+    <script type="text/babel" src="./components/Footer.js"></script>
 
+    <script type="text/babel" src="index.js"></script>
 
-  <!-- root component -->
-  <script type="text/babel" src="index.js"></script>
-  <!--
-      Note: this page is a great way to try React but it's not suitable for production.
-      It slowly compiles JSX with Babel in the browser and uses a large development build of React.
-
-      Read this page for starting a new React project with JSX:
-      https://react.dev/learn/start-a-new-react-project
-
-      Read this page for adding React with JSX to an existing project:
-      https://react.dev/learn/add-react-to-an-existing-project
-    -->
 </body>
 
 </html>
