refactor: Fix indentation of script tags in index.html for improved readability

--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
 <body class="bg-slate-100 text-slate-800 flex items-center justify-center min-h-screen p-4">
   <div id="root" class="bg-slate-100 text-slate-800 flex items-center justify-center min-h-screen p-4"></div>
 
-  <<script type="text/babel" src="./components/ProgressBar.js">
-    </script>
-    <script type="text/babel" src="./components/Heading1.js"></script>
-    <script type="text/babel" src="./components/MyButton.js"></script>
-    <script type="text/babel" src="./components/OptionChoice.js"></script>
-    <script type="text/babel" src="./components/ChoiceResult.js"></script>
+  <script type="text/babel" src="./components/ProgressBar.js">
+  </script>
+  <script type="text/babel" src="./components/Heading1.js"></script>
+  <script type="text/babel" src="./components/MyButton.js"></script>
+  <script type="text/babel" src="./components/OptionChoice.js"></script>
+  <script type="text/babel" src="./components/ChoiceResult.js"></script>
 
-    <script type="text/babel" src="./components/ReviewSection.js"></script>
-    <script type="text/babel" src="./components/SubMainQuizContainer.js"></script>
-    <script type="text/babel" src="./components/SubMainResultContainer.js"></script>
+  <script type="text/babel" src="./components/ReviewSection.js"></script>
+  <script type="text/babel" src="./components/SubMainQuizContainer.js"></script>
+  <script type="text/babel" src="./components/SubMainResultContainer.js"></script>
 
-    <script type="text/babel" src="./components/GlobalContext.js"></script>
+  <script type="text/babel" src="./components/GlobalContext.js"></script>
 
-    <script type="text/babel" src="./components/Header.js"></script>
-    <script type="text/babel" src="./components/Main.js"></script>
-    <script type="text/babel" src="./components/Footer.js"></script>
+  <script type="text/babel" src="./components/Header.js"></script>
+  <script type="text/babel" src="./components/Main.js"></script>
+  <script type="text/babel" src="./components/Footer.js"></script>
 
-    <script type="text/babel" src="index.js"></script>
+  <script type="text/babel" src="index.js"></script>
 
 </body>
 
